--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>suratan</h1>
-    <img src="Profile.jpg" alt="">
+    <img src="Profile.jpg" alt="" width="1200" height="1200">
 </body>
 </html>
