--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>suratan</h1>
-    <img src="Profile.jpg" alt="" width="1200" height="1200">
+    <h1>suratan boonpong</h1>
+    <h1>63011017</h1>
+    <img src="Profile.jpg" alt="" width="600" height="600">
 </body>
 </html>
